feat: print codex-mgr serve config and graceful shutdown

--- a/codex-rs/mgr/Cargo.toml
+++ b/codex-rs/mgr/Cargo.toml
@@ -22,5 +22,5 @@ dirs = { workspace = true }
 futures = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
-tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
+tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal"] }
 toml = { workspace = true }
