--- a/codex-rs/Cargo.toml
+++ b/codex-rs/Cargo.toml
@@ -176,6 +176,7 @@ pulldown-cmark = "0.10"
 rand = "0.9"
 ratatui = "0.29.0"
 ratatui-macros = "0.6.0"
+redis = { version = "1.0.1", default-features = false, features = ["connection-manager", "tokio-comp"] }
 regex = "1.12.2"
 regex-lite = "0.1.7"
 reqwest = "0.12"
