--- a/codex-rs/mgr/Cargo.toml
+++ b/codex-rs/mgr/Cargo.toml
@@ -26,5 +26,6 @@ redis = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
+sha2 = { workspace = true }
 tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal"] }
 toml = { workspace = true }
