--- a/codex-rs/mgr/Cargo.toml
+++ b/codex-rs/mgr/Cargo.toml
@@ -27,5 +27,5 @@ reqwest = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 sha2 = { workspace = true }
-tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal"] }
+tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
 toml = { workspace = true }
