mgr: add gateway observability + ops endpoints (M8)

--- a/codex-rs/mgr/Cargo.toml
+++ b/codex-rs/mgr/Cargo.toml
@@ -15,6 +15,7 @@ workspace = true
 anyhow = { workspace = true }
 axum = { workspace = true, default-features = false, features = ["http1", "tokio"] }
 base64 = { workspace = true }
+bytes = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 codex-backend-client = { workspace = true }
 codex-core = { workspace = true }
@@ -29,3 +30,5 @@ serde_json = { workspace = true }
 sha2 = { workspace = true }
 tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
 toml = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
